Fixed button spacing

--- a/summit/css/combined.css
+++ b/summit/css/combined.css
@@ -3815,13 +3815,13 @@ h3.schedule-select-title {
 
 a.all-sessions-btn {
   display: block;
-  max-width: 180px;
   margin-top: 20px;
   text-align: center;
   color: white;
   padding: 10px 20px;
   background: #29abe2;
-  border-radius: 4px; }
+  border-radius: 4px;
+  whitespace: no-wrap; }
   a.all-sessions-btn:hover {
     text-decoration: none;
     background: #30739C; }
